[gd_scene load_steps=4 format=3 uid="uid://bhtqsqaps73ok"]

[ext_resource type="Texture2D" uid="uid://cn2rk638i6kbr" path="res://Assets/Art/Telescope.png" id="1_mi1wi"]
[ext_resource type="Script" uid="uid://ddc8munha0sth" path="res://telescope.gd" id="1_vb11p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vb11p"]
size = Vector2(25, 22)

[node name="Telescope" type="Node2D"]
script = ExtResource("1_vb11p")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_mi1wi")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, -1)
shape = SubResource("RectangleShape2D_vb11p")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
